# pdp

authentication-authorization/: README.md
builder-pattern/: README.md  meal_builder.py
cdn-setup/: README.md
celery-advanced/: README.md  configuration.md  examples.md
code-security-basics/: README.md
csrf-protection/: README.md
database-migrations/: README.md
database-normalization/: README.md
database-optimization/: README.md
design-first-approach/: README.md  feature-examples.md  feature-template.md
entity-relationship-notation/: README.md
gdpr-rules/: README.md
jwt-authentication/: README.md
mongo-docker/: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  env.example  justfile  pyproject.toml
mongo-docker/app/: config.py  database.py  main.py  pyproject.toml  routers.py  services.py
mongo-docker/app/app/: __init__.py  config.py  database.py  main.py  middleware.py  models.py  services.py
mongo-docker/scripts/: backup.sh  init-mongo.js  restore.sh
nginx-cache-setup/: README.md
pagespeed-insights-lighthouse/: README.md
prototype-pattern/: README.md  npc_prototype.py
pyenv-pipenv-setup/: README.md
redis-pubsub-messaging/: README.md
redis-secondary-database/: README.md
redis-session-storage/: README.md
soa-architecture/: README.md  patterns-and-examples.md
soap-protocol/: README.md
social-authentication/: README.md  simple_social_auth.py
social-sharing/: README.md  social_sharing_example.html
state-pattern/: README.md  media_player.py
